Changelog updated for tagging for 0.5.2 release

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,11 @@
 
+0.5.2 Feature Release
+---------------------
+* You can now drag image files and folders to the VitaminSEE icon. I've
+  registered VitaminSEE as a handler for folders, JPEGS, GIFs and TIFFs. Now
+  all I need to do if figure out how to reigster with the Finder's "Open 
+  With..." menu...
+
 0.5.1 Bugfix Release
 --------------------
 * Fixed displaying of wrong filesize on files over 1 Megabyte.
