Comitting Tiger changes. This code has been dogfooded for a while, and is probably going to become 0.6.

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,33 @@
+0.6 Release
+-----------
+* A couple of speed fixes:
+  * Entering a new directory is much faster. On my computer, entering a
+    directory of 746 images took 5 seconds in 0.5.3. Now it takes less then
+	a second.
+  * Cut application startup time by a small amount.
+  * More intelligent preloading behavior makes things "feel" faster.
+  * Tiger fixes a problem with the AppKit that was causing me to do more 
+    redraws then was neccessary. Slightly faster on Tiger (you'll notice it 
+	only if you scroll through your files on a low memory machine).
+* ICNS and Windows Bitmap (BMP) support.
+* Stop assuming people have a "~/Pictures" folder. Some people have broken
+  out of Apple's default hiearchy and we shouldn't make assumptions.
+* Finally get rid of that annoying graphical glitch where thumbnails aren't
+  drawn in certain circumstances.
+* When an image won't fit in the viewing area, the user can now drag the image
+  around with a hand cursor like they can in Preview.
+* Change "Sort Manager" preferences to "Favorites." These paths are now used
+  both in the Sort Manager and in the new "Favorite Locations" menu in the "Go"
+  menu and its corresponding toolbar item.
+* Files with the wrong extentsion (JPEG files ending in GIF, PNG files ending 
+  in JPEG) are loaded, instead of raising an error.
+* Move, Copy and Rename operations now check if they are overwriting a file
+  and warn the user. 
+* Move, Copy and Rename are now undoable. Undo for delete isn't implemented 
+  yet. (I'm having problems figuring out the trash system, but I'll get it
+  eventually).
+
+
 0.5.3 Feature Release
 ---------------------
 * Changed the SortManager so that the NSTableView takes up the entire window, 
