--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+0.7 Final Release (?????)
+-------------------------
+* Add "Enclosing Folder" and "Go to Folder..." toolbar items.
+* Fix the Help menu
+
 0.7-Beta Release (February 8th, 2006)
 -------------------------------------
 * Move to a multi-window interface. This required a substantial refactoring/
