--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,5 @@
-????? Unreleased
-------------------
+0.7.1.2 Bugfix Release (March 28th, 2006)
+-----------------------------------------
 * Fix memory leaks caused by thumbnails, windows, documents and a bunch of other
   objects never being deallocated.
 * Modify IconFamily so it makes less extranious copies.
